Add dedicated Agent Console page
NEW: agent.html - Dedicated page showing external agent calling marketplace
- Agent wallet with balance display
- Service discovery panel
- Live console output showing x402 flow
- Transaction history with Stacks Explorer links
- Quick action buttons for common tasks

Marketplace now links to Agent Console instead of modal

--- a/marketplace.html
+++ b/marketplace.html
@@ -642,9 +642,9 @@
           🟠 Mainnet
         </button>
       </div>
-      <button class="launch-btn" onclick="openLaunchModal()">
-        🚀 Launch Agent
-      </button>
+      <a href="agent.html" class="launch-btn" style="text-decoration: none;">
+        🤖 Agent Console
+      </a>
       <button class="wallet-btn" id="wallet-btn" onclick="connectWallet()">
         🔗 Connect Wallet
       </button>
