--- a/apps/demo-ui/marketplace.html
+++ b/apps/demo-ui/marketplace.html
@@ -642,9 +642,9 @@
           🟠 Mainnet
         </button>
       </div>
-      <button class="launch-btn" onclick="openLaunchModal()">
-        🚀 Launch Agent
-      </button>
+      <a href="agent.html" class="launch-btn" style="text-decoration: none;">
+        🤖 Agent Console
+      </a>
       <button class="wallet-btn" id="wallet-btn" onclick="connectWallet()">
         🔗 Connect Wallet
       </button>
