--- a/agent.html
+++ b/agent.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Agent Console | SatStack</title>
+  <title>Agent Console | AgentPaySTX</title>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
